Updated readme.md and fixed overflow issue within modal

--- a/src/containers/MovieModal/MovieModal.scss
+++ b/src/containers/MovieModal/MovieModal.scss
@@ -30,7 +30,7 @@
       max-height: 10rem;
       white-space: pre-wrap;
       margin: 0.5rem 0;
-      overflow: scroll-y;
+      overflow-y: scroll;
     }
   }
   .image-container {
